# Letterpress

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Letterpress.doap  README.md  asciiimages.doap  devbox.json  io.gitlab.gregorni.ASCIIImages.json  io.gitlab.gregorni.Letterpress.Devel.json  io.gitlab.gregorni.Letterpress.json  justfile  letterpress.doap  meson.build  update_translation.sh  update_translations.sh
build-aux/: artem.json  blueprint-compiler.json
data/: io.gitlab.gregorni.ASCIIImages.appdata.xml.in  io.gitlab.gregorni.ASCIIImages.desktop.in  io.gitlab.gregorni.ASCIIImages.gschema.xml  io.gitlab.gregorni.Letterpress.appdata.xml.in  io.gitlab.gregorni.Letterpress.appdata.xml.in.in  io.gitlab.gregorni.Letterpress.desktop.in  io.gitlab.gregorni.Letterpress.desktop.in.in  io.gitlab.gregorni.Letterpress.gschema.xml  io.gitlab.gregorni.Letterpress.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  asciiimages.pot  cs.po  da.po  de.po  es.po  et.po  eu.po  fi.po  fr.po  hi.po  hr.po  hu.po  ia.po  it.po  letterpress.pot  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  ta.po  tr.po  uk.po  vi.po  zh_Hans.po
src/: asciiimages.gresource.xml  asciiimages.in  character_sets.py  error_dialog.py  file_chooser.py  letterpress.gresource.xml  letterpress.gresource.xml.in  letterpress.in  main.py  meson.build  pasting.py  profile.py.in  style-hc-dark.css  style-hc.css  style.css  supported_formats.py  texture_to_file.py  tips_dialog.py  window.blp  window.py  window.ui  zoom-box.blp  zoom_box.py  zoom_consts.py
src/gtk/: help-overlay.blp  help-overlay.ui  tips-dialog.blp  window.blp  zoom-box.blp
